package com.telegraft.model

final case class UserChat(
                           userId: Long,
                           chatId: Long
                         )